--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,32 @@
-html,
+html{
+  box-sizing: border-box;
+  font-size: 62.5%; /* // 10px/16px = 62.5% -> 1rem = 10px; */
+  @media only screen and (min-width: 1700px) {
+    font-size: 80%; 
+  }
+  /* @media only screen and (max-width: ${props => props.theme.breakPoints.bpLarge}) {
+    font-size: 55%; 
+  } */
+}
+*,
+  *::before,
+  *::after {
+    margin: 0;
+    padding: 0;
+    box-sizing: inherit;
+    font-family: "Gotham Rounded";
+  }  
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  display: grid;
+  max-width: 2000px;
+  /* justify-content: center; */
+  margin: auto;
+  /* justify-items: center; */
+  /* background: ${props => props.theme.colorBg}; */
+  /* align-content: center; */
+  box-sizing: border-box;
+  min-height: 100vh;
+  /* color: ${props => props.theme.colorSecondary}; */
 }
 
 a {
@@ -11,6 +34,4 @@ a {
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
-}
+ 
